fix: golang webp package memory leak
